Finish_header & import font

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,4 @@
 @import 'reset.css';
 @import 'header.css';
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Open+Sans:300,400,700|Roboto:300,400,700');
+@import 'global.css';
