--- a/css/global.css
+++ b/css/global.css
@@ -2,4 +2,5 @@ body {
   font-family: 'Noto Sans', sans-serif;
   font-family: 'Roboto', sans-serif;
   font-family: 'Open Sans', sans-serif;
+  margin-top: 60px;
 }
