--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,4 @@
 @import 'header.css';
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Open+Sans:300,400,700|Roboto:300,400,700');
 @import 'global.css';
+@import 'navigation.css';
