--- a/css/global.css
+++ b/css/global.css
@@ -3,4 +3,5 @@ body {
   font-family: 'Roboto', sans-serif;
   font-family: 'Open Sans', sans-serif;
   margin-top: 60px;
+  margin-bottom: 60px;
 }
