--- a/css/header.css
+++ b/css/header.css
@@ -2,10 +2,11 @@
   background-color : #523737;
   color : white;
   padding : 5px 10px 15px 10px;
-  position: fixed;
-  width:98.4%;
+  position: absolute;
+  width:100%;
   top : 0;
   z-index: 2;
+  box-sizing: border-box;
 }
 
 .top-header .header__top,
