--- a/css/navigation.css
+++ b/css/navigation.css
@@ -5,6 +5,29 @@
   bottom: 0;
   display: flex;
   justify-content: space-between;
+  border-top: 1px solid #e7e7e7;
+  box-shadow: 0px -2px 2px rgb(204, 204, 204, 0.2);
+}
 
+.top__bar .top__bar__tab {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-decoration: none;
+  margin: 10px 30px 5px 30px;
+  color : #c1c1c1;
+}
 
+.top__bar .top__bar__tab i {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 24px;
+}
+
+.top__bar .top__bar__tab .top__bar__title {
+  font-size: 10px;
+}
+
+.top__bar .top__bar__tab--selected {
+  color : #523737;
 }
