--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,6 @@ body {
   font-family: 'Noto Sans', sans-serif;
   font-family: 'Roboto', sans-serif;
   font-family: 'Open Sans', sans-serif;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
