--- a/css/header.css
+++ b/css/header.css
@@ -2,10 +2,9 @@
   background-color : #523737;
   color : white;
   padding : 5px 10px 15px 10px;
-  position: absolute;
+  position: fixed;
   width:100%;
   top : 0;
-  z-index: 2;
   box-sizing: border-box;
 }
 
