--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Open+Sans:300,400,700|Roboto:300,400,700');
 @import 'reset.css';
 @import 'header.css';
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Open+Sans:300,400,700|Roboto:300,400,700');
 @import 'global.css';
 @import 'navigation.css';
+@import 'search-bar.css';
