--- a/css/search-bar.css
+++ b/css/search-bar.css
@@ -1,18 +1,22 @@
 .search-bar {
-  margin : 10px 25px;
+  margin : 12px 16px;
   position: relative;
 }
 
 .search-bar input {
   width:100%;
-  padding : 5px 7px;
+  padding : 5px 8px 5px 40px;
   box-sizing: border-box;
   border-radius: 8px;
   border : 0px;
   background-color: #f2f2f2;
-  text-align: center;
-  color : #bbb;
+  text-align: left;
+  color : #4b4b4b;
   font-size: 13px;
+}
+
+.search-bar input::placeholder {
+  color:#bbb;
 }
 
 .search-bar input:focus {
