--- a/css/friends.css
+++ b/css/friends.css
@@ -14,14 +14,19 @@
   padding: 8px 16px;
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 16px;
   color:#4b4b4b;
-  /* border-bottom: 1px solid #eee; */
+  font-weight: 400;
+  border-bottom: 1px solid #eee;
 
 }
 
+.friends__section--rows .friends__section--row:nth-child(2){
+  border-bottom: none;
+}
+
 .friends__section--row img {
-  width: 40px;
+  width: 48px;
   border-radius: 50%;
   margin-right: 16px;
 }
