--- a/css/chats.css
+++ b/css/chats.css
@@ -6,6 +6,7 @@
 .chats__list .chats__chat {
   padding: 8px 16px;
   border-bottom: 1px solid #eee;
+  background-color: #fff;
 }
 
 .chats__list .chats__chat:last-child {
