--- a/css/find.css
+++ b/css/find.css
@@ -25,8 +25,8 @@
 
 
 .find__recommended header{
-  border-top : 0.5px solid #eee;
-  border-bottom: 1px solid #eee;
+  border-top : 0.5px solid #ddd;
+  border-bottom: 1px solid #ddd;
   padding: 8px 16px;
   font-size: 12px;
   color:#b4b4b4;
@@ -39,7 +39,8 @@
 .recommended__none{
   padding: 16px 0px;
   text-align: center;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #ddd;
+
 }
 
 .recommended__none .recommended__text {
