--- a/css/friends.css
+++ b/css/friends.css
@@ -18,7 +18,7 @@
   color:#4b4b4b;
   font-weight: 400;
   border-bottom: 1px solid #eee;
-
+  background-color: #fff;
 }
 
 .friends__section--rows .friends__section--row:nth-child(2){
