css_profile_finish

--- a/css/global.css
+++ b/css/global.css
@@ -4,5 +4,5 @@ body {
   font-family: 'Open Sans', sans-serif;
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #f1f1f1;
+  background-color: #ffffff;
 }
