--- a/css/header.css
+++ b/css/header.css
@@ -9,6 +9,10 @@
   z-index: 1000;
 }
 
+.top-header a{
+  color: #fff;
+}
+
 .top-header .header__top,
 .top-header .header__bottom {
   display: flex;
