--- a/css/more.css
+++ b/css/more.css
@@ -1,5 +1,6 @@
 .more {
   background-color: #f1f1f1;
+
 }
 
 .more .more__header {
@@ -64,6 +65,7 @@
   text-align: center;
   align-items: center;
   color:#523737;
+  cursor: pointer;
 }
 
 .more__option .more__option-title {
@@ -108,6 +110,7 @@
   width: 50%;
   margin-bottom: 30px;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 .plus-friends__item i {
@@ -131,6 +134,7 @@
   flex-direction: column;
   align-items: center;
   margin-right: 16px;
+  cursor: pointer;
 }
 
 .more__option img {
