--- a/css/global.css
+++ b/css/global.css
@@ -3,6 +3,6 @@ body {
   font-family: 'Roboto', sans-serif;
   font-family: 'Open Sans', sans-serif;
   padding-top: 60px;
-  padding-bottom: 60px;
+  /* padding-bottom: 60px; */
   background-color: #ffffff;
 }
