--- a/css/profile.css
+++ b/css/profile.css
@@ -1,5 +1,6 @@
 .top-header--transparent {
   background-color: transparent;
+
 }
 
 .profile {
@@ -10,7 +11,7 @@
 .profile .profile__header {
   height: 80vh;
   /* background-color: red; */
-  background-image: url('https://i.pinimg.com/736x/60/b0/a7/60b0a7ef623bc2487385bace5d68fc8c--material-wallpapers-android-fantastic-wallpapers.jpg');
+  background-image: url(../images/bakcground_1.jpg);
   background-position: center center;
   background-size: cover;
   width:100%;
