--- a/css/profile.css
+++ b/css/profile.css
@@ -11,7 +11,7 @@
 .profile .profile__header {
   height: 80vh;
   /* background-color: red; */
-  background-image: url(../images/bakcground_1.jpg);
+  background-image: url(../images/bakcground_1.png);
   background-position: center center;
   background-size: cover;
   width:100%;
@@ -49,10 +49,15 @@
   flex-direction: column;
 }
 
-.profile__container input {
+.profile__container p {
+  /* background-color: #eee; */
+  border: 1px solid #eee;
   padding: 4px 8px 4px 8px;
   text-align: center;
   margin-bottom: 24px;
+  font-size: 12px;
+  cursor: pointer;
+  color: #999;
 }
 
 .profile__container .profile__actions {
