--- a/css/chats.css
+++ b/css/chats.css
@@ -9,6 +9,10 @@
   background-color: #fff;
 }
 
+.chats__list .chats__chat:hover {
+  background-color: #fafafa;
+}
+
 .chats__list .chats__chat:last-child {
   border: none;
 }
@@ -63,4 +67,12 @@
   font-size: 20px;
   color:#523737;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: color .3s, background-color .5s ease-in-out;
+}
+
+.chat__btn:hover{
+  background-color: #523737;
+  color:#fff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
