--- a/css/global.css
+++ b/css/global.css
@@ -5,4 +5,21 @@ body {
   padding-top: 60px;
   /* padding-bottom: 60px; */
   background-color: #ffffff;
+
+}
+
+main {
+  animation: 0.5s mainOpener ease;
+}
+
+@keyframes mainOpener {
+
+  from {
+    opacity: 0;
+    transform:translateY(5px);
+  }
+
+  to {
+    opacity: 1;
+  }
 }
