--- a/css/search-bar.css
+++ b/css/search-bar.css
@@ -9,11 +9,12 @@
   padding : 8px 8px 8px 40px;
   box-sizing: border-box;
   border-radius: 8px;
-  border : 0px;
+  border : 1px solid transparent;
   background-color: #f2f2f2;
   text-align: left;
   color : #4b4b4b;
   font-size: 13px;
+  transition: all 0.3s ease;
 }
 
 .search-bar input::placeholder {
@@ -22,6 +23,7 @@
 
 .search-bar input:focus {
   outline: none;
+  border: 1px solid #ccc;
 }
 
 .search-bar i {
