--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 600px) {
+@media screen and (max-width:1440px) and (min-width: 600px)  {
   .bigScreenText {
     display: flex;
   }
