--- a/css/navigation.css
+++ b/css/navigation.css
@@ -10,6 +10,8 @@
   -moz-box-shadow: 0px -2px 2px rgb(204, 204, 204, 0.2);
   -webkit-box-shadow: 0px -2px 2px rgb(204, 204, 204, 0.2);
   box-shadow: 0px -2px 2px rgb(204, 204, 204, 0.2);
+  -webkit-appearance: none;
+  appearance:none;
 }
 
 .top__bar .top__bar__tab {
