--- a/css/navigation.css
+++ b/css/navigation.css
@@ -8,10 +8,10 @@
   display: flex;
   justify-content: space-between;
   border-top: 1px solid #e7e7e7;
-  -ms-box-shadow: 0px -2px 2px rgb(204, 204, 204, 0.2);
-  -moz-box-shadow: 0px -2px 2px rgb(204, 204, 204, 0.2);
-  -webkit-box-shadow: 0px -2px 2px rgb(204, 204, 204, 0.2);
-  box-shadow: 0px -2px 2px rgb(204, 204, 204, 0.2);
+  -ms-box-shadow: 0px -2px 2px rgba(204, 204, 204, 0.2);
+  -moz-box-shadow: 0px -2px 2px rgba(204, 204, 204, 0.2);
+  -webkit-box-shadow: 0px -2px 2px rgba(204, 204, 204, 0.2);
+  box-shadow: 0px -2px 2px rgba(204, 204, 204, 0.2);
 }
 
 .top__bar .top__bar__tab {
