--- a/css/chat.css
+++ b/css/chat.css
@@ -164,6 +164,8 @@
   width:100%;
   padding:8px;
   border: 1px solid #e4e4e4;
+  -webkit-border-radius: 0px;
+  border-radius: 0px;
   border-right: none;
   color:#4b4b4b;
   font-size: 14px;
