--- a/css/chat.css
+++ b/css/chat.css
@@ -164,8 +164,6 @@
   width:100%;
   padding:8px;
   border: 1px solid #e4e4e4;
-  -webkit-border-radius: 0px;
-  border-radius: 0px;
   border-right: none;
   color:#4b4b4b;
   font-size: 14px;
@@ -173,6 +171,8 @@
 
 .type-message__input input:focus {
   outline:none;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
 }
 
 .type-message__input .fa-smile {
