--- a/css/search-bar.css
+++ b/css/search-bar.css
@@ -22,8 +22,11 @@
 }
 
 .search-bar input:focus {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
   outline: none;
   border: 1px solid #ccc;
+
 }
 
 .search-bar i {
