css_iphone_edit_02

--- a/css/search-bar.css
+++ b/css/search-bar.css
@@ -5,6 +5,8 @@
 }
 
 .search-bar input {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
   width:100%;
   padding : 8px 8px 8px 40px;
   box-sizing: border-box;
