--- a/css/chat.css
+++ b/css/chat.css
@@ -161,6 +161,7 @@
 }
 .type-message__input input {
   -webkit-appearance: none;
+  -webkit-border-radius: 0;
   width:100%;
   padding:8px;
   border: 1px solid #e4e4e4;
