--- a/css/search-bar.css
+++ b/css/search-bar.css
@@ -2,6 +2,8 @@
   padding : 12px 16px;
   position: relative;
   background-color: #fff;
+  display: flex;
+  align-items: center;
 }
 
 .search-bar input {
@@ -31,6 +33,6 @@
 .search-bar i {
   position: absolute;
   color : #aaa;
-  top:21px;
+  /* top:21px; */
   left: 28px;
 }
